--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
     ///🎰🎰Rendering y animación
 function render (){
 renderer.render(scene, camera);
-//requestAnimationFrame(render);
+requestAnimationFrame(render);
 }
 renderer.setAnimationLoop( render );
 </script>
