--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Navidad VR Base</title>
+    <title>Navidad PB VR </title>
     <link rel="icon" type="image/png" href="./image/f1.png"/> 
     <style>
         body { margin: 0; overflow: hidden; }
